--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-popper": "0.9.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-simple-dropdown": "^3.2.3",
     "react-split-pane": "^0.1.91",
     "reactstrap": "^5.0.0",
     "yarn": "^1.22.4"
